# opossum-file

./: .mdformat.toml  .pre-commit-config.yaml  CONTRIBUTORS.md  README.md  REUSE.toml  build.py  pyproject.toml  renovate.json
.github/workflows/: build-and-e2e-test.yml  lint_and_run_tests.yml  publish-release.yml  reuse.yml
docs/: architecture.md  opossum-file-architecture.png.license
src/opossum_lib/: cli.py
src/opossum_lib/core/entities/: config.py  opossum_package.py  resource.py  root_resource.py  scan_results.py
src/opossum_lib/core/services/: compare_impl.py  extract_subtree_impl.py  merge_opossums.py
src/opossum_lib/input_formats/opossum/services/: convert_to_opossum.py
src/opossum_lib/input_formats/owasp_deependency_scan/entities/: owasp_dependency_report_model.py
src/opossum_lib/input_formats/owasp_deependency_scan/services/: convert_to_opossum.py  owasp_dependency_scan_file_reader.py
src/opossum_lib/input_formats/owasp_dependency_scan/entities/: owasp_dependency_report_model.py
src/opossum_lib/input_formats/owasp_dependency_scan/services/: convert_to_opossum.py  owasp_dependency_scan_file_reader.py
src/opossum_lib/input_formats/scancode/: constants.py
src/opossum_lib/input_formats/scancode/entities/: scancode_model.py
src/opossum_lib/input_formats/scancode/services/: convert_to_opossum.py
src/opossum_lib/shared/entities/: opossum_input_file_model.py
tests/: conftest.py  test_cli.py
tests/core/entities/: test_opossum.py
tests/core/entities/generators/: opossum_provider.py  resource_provider.py  scan_results_provider.py
tests/core/services/: test_extract_subtree.py  test_merge_opossums.py
tests/data/: dependency-check-report.json  opossum_input_with_classification.opossum  provenant_input.json  scancode_input.json
tests/input_formats/opossum/entities/generators/: generate_file_information.py  generate_outfile_information.py
tests/input_formats/opossum/services/: test_conversion_roundtrip.py
tests/input_formats/owasp_deependency_scan/entities/generators/: owasp_dependency_report_model_provider.py
tests/input_formats/owasp_deependency_scan/services/: test_convert_to_opossum.py
tests/input_formats/owasp_dependency_scan/entities/generators/: owasp_dependency_report_model_provider.py
tests/input_formats/owasp_dependency_scan/services/: test_convert_to_opossum.py
tests/input_formats/scancode/entities/: test_scancode_model.py
tests/input_formats/scancode/entities/generators/: generate_files.py  generate_header.py  generate_license_references.py  generate_scancode_file.py
tests/input_formats/scancode/services/: test_convert_to_opossum.py  test_get_attribution_info.py
tests/setup/: opossum_faker_setup.py  opossum_file_faker_setup.py  owasp_dependency_scan_faker_setup.py  scancode_faker_setup.py
tests/shared/: comparison_helpers.py  generator_helpers.py
